--- a/style.css
+++ b/style.css
@@ -288,7 +288,8 @@ body {
   color: #fff;
   transition: all 0.35s;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 500;
   padding-left: 40px;
   z-index: 1000;
 }
@@ -336,7 +337,7 @@ body {
 
 .hero-content {
   padding: 150px 0;
-  background: url("images/temp_back.avif") no-repeat;
+  background: url("images/header_bg.png") no-repeat;
   background-size: cover;
 }
 
@@ -360,7 +361,7 @@ body {
   /* margin-right: 150px; */
   font-family: mountains;
   font-size: 50px;
-  background: -webkit-linear-gradient(#00d0ff, #25ffbf);
+  background: -webkit-linear-gradient(#1261ce, #d953db);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -394,6 +395,7 @@ body {
   ------------------------------------------------------------*/
 
 .countdown {
+  
   margin-top: 40px;
   width: 80%;
   gap: 3rem;
@@ -402,7 +404,9 @@ body {
 }
 
 .countdown-holder {
-  min-width: 40px;
+  background: #00000072;
+  border-radius: 10px;
+  width: 110px;
   margin-bottom: 30px;
 }
 
